# cpm-camera

./: .dockerignore  .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .prettierrc.js  Dockerfile  README.md  auth.js  constants.js  db.js  index.js  main.py  package-lock.json  package.json  runProcess.sh  util.js
.github/workflows/: main.yml
controllers/: admin.js  camera.js  info.js  photo.js  processed.js
process/: .gitignore  Pipfile  build.sh  process.py  pyproject.toml  test.py
routes/: index.js
views/: admin.jsx  login.jsx
views/layouts/: default.jsx
website/: package-lock.json  package.json
website/src/: App.js
